--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,16 @@
         "build": "vite build",
         "dev": "vite"
     },
+    "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@inertiajs/progress": "^0.2.9",
+        "@inertiajs/react": "^1.2.0",
+        "@mui/icons-material": "^6.1.2",
+        "@mui/material": "^6.1.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
