--- a/backend/composer.json
+++ b/backend/composer.json
@@ -3,13 +3,17 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "fabpot/goutte": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -72,5 +76,14 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./packages/goutte",
+            "options": {
+                "symlink": false
+            }
+        }
+    ]
 }
