--- a/backend/package.json
+++ b/backend/package.json
@@ -9,15 +9,18 @@
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
-        "@inertiajs/progress": "^0.2.9",
+        "@inertiajs/progress": "^0.2.7",
         "@inertiajs/react": "^1.2.0",
         "@mui/icons-material": "^6.1.2",
         "@mui/material": "^6.1.2",
+        "chart.js": "^4.4.7",
         "react": "^18.3.1",
+        "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
