--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
-    "chart.js": "^4.4.7",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react-swc": "^3.8.0",
@@ -27,4 +28,3 @@
     "vite": "^5.3.1"
   }
 }
-
